@@ -43,6 +43,7 @@ export(all_words)
 export(as_count)
 export(as_dtm)
 export(as_tdm)
+export(as_term_list)
 export(as_terms)
 export(assign_validation_task)
 export(classification_project)
@@ -80,6 +81,7 @@ export(term_before)
 export(term_cols)
 export(term_count)
 export(term_first)
+export(token_count)
 export(uncovered)
 export(unnest_term_list)
 export(update_names)
