@@ -168,3 +168,20 @@ spacer <- function(x){
 }
 
 constrain <- function(x, lower, upper) ifelse(x < lower, lower, ifelse(x > upper, upper, x))
+
+.mgsub <- function (pattern, replacement, text.var, fixed = TRUE,
+	order.pattern = fixed, perl = TRUE, ...) {
+
+    if (fixed && order.pattern) {
+        ord <- rev(order(nchar(pattern)))
+        pattern <- pattern[ord]
+        if (length(replacement) != 1) replacement <- replacement[ord]
+    }
+    if (length(replacement) == 1) replacement <- rep(replacement, length(pattern))
+
+    for (i in seq_along(pattern)){
+        text.var <- gsub(pattern[i], replacement[i], text.var, fixed = fixed, perl = perl, ...)
+    }
+
+    text.var
+}
