@@ -33,6 +33,15 @@ NEW FEATURES
 * `term_before`, `term_after`, & `term_first` added to get frequencies of terms
   relative to other terms or specific locations.
 
+* `token_count` added to count the occurrence of tokens within a vector of
+  strings.  This function differs from`term_count` in that `term_count` is
+  regex based, allowing for fuzzy matching.  This function only searches for
+  lower cased tokens (words, number sequences, or punctuation).  This counting
+  function is faster but less flexible.
+
+* `as_term_list` added.  This is a convenience function to convert a vector of
+  terms into a named list.
+
 MINOR FEATURES
 
 * `important_terms` picks up a plot method corresponding to the `frequent_terms`
